# ferrix

./: .gitignore  README.md  REUSE.toml  default.nix  flake.nix
.github/workflows/: check.yml  example.yml
example/: Cargo.toml  flake.nix
example/src/: main.rs
