# SPDX-FileCopyrightText: 2025 Ryan Cao <hello@ryanccn.dev>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "example"
version = "0.1.0"
edition = "2024"
description = "An example project"
license = "Apache-2.0"

[dependencies]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
